# qr

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cc  qr.cc  qr.h  qr_test.cc
src/: qr.cc
